--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <%= button_to("Sign_In", new_admin_session_path, method: :get) %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <%= yield %>
+    <% if current_admin %>
+      <%= button_to("Log Out", destroy_admin_session_path, method: :delete) %>
+    <% end %>
   </body>
 </html>
