--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -1,5 +1,6 @@
-<%= form_with(url: employee_create_path) do |f| %>
-  <div>
+<%= form_with(url: url) do |f| %>
+
+    <div>
     <%= f.label :name %>
     <%= f.text_field :name, placeholder: "Petter Pipper" %>
   </div>
@@ -27,5 +28,6 @@
   <div>
     <%= f.submit "Create" %>
   </div>
+
 
 <% end %>
