--- a/app/views/dashboard/new.html.erb
+++ b/app/views/dashboard/new.html.erb
@@ -1,3 +1,3 @@
-<%= render "form", employee: @employee %>
+<%= render 'form',  url: employee_create_path %>
 
 <%= link_to "home", dashboard_index_path %>
