Add live clock for root page from ap with js

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Vista general de la aplicacion</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+
+
+<div class="container">
+  <span id="hour"></span> :
+  <span id="minutes"></span> :
+  <span id="seconds"></span>
+</div>
