Create utilities files

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,5 +19,15 @@
 @import "layouts/header";
 @import "layouts/navbar";
 
+// Utilites
+@import "utilities/align_and_justify";
+@import "utilities/display";
+@import "utilities/spacing";
+@import "utilities/flex_direction";
+@import "utilities/text_align";
+
+// Pages
+@import "pages/home_index";
+
 
 
