--- a/app/assets/stylesheets/layouts/_navbar.scss
+++ b/app/assets/stylesheets/layouts/_navbar.scss
@@ -1,8 +1,34 @@
-.nav {
+.nav-home {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(242, 163, 163);
-  color: white;
+  &__logo {
+    color: var(--color-white);
+    font-weight: 400;
+    font-size: 32px;
+    text-transform: uppercase;
+    font-family: var(--font-family-jaldi);
+    &:hover {
+      color: rgb(77, 77, 219);
+    }
+  }
+  &__button {
+    background: rgba(255, 255, 255, 0.264);
+    border-radius: 5px;
+    color: white;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 54px;
+    border-style: none;
+    padding: 10px;
+    transition: 0.3s;
+    &:hover {
+      color: white;
+      background-color: #fbab7e;
+      background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+    }
+  }
 }
