--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -1,33 +1,51 @@
-<%= form_with(url: url) do |f| %>
-
-    <div>
-    <%= f.label :name %>
-    <%= f.text_field :name, placeholder: "Petter Pipper" %>
+<div class="form-container">
+  <div class="left">
+    <div class="header">
+      <h1>Create an account for employee</h1>
+      <p class="">Fill in the blanks with the requested information</p>
+    </div>
+    <div class="content-main">
+      <div class="content-form">
+        <%= form_with(url: url) do |f| %>
+          <div>
+            <%= f.label "Email*", class: "title" %>
+            <br />
+            <%= f.email_field :email, placeholder: "petter@email.com", class: "input" %>
+          </div>
+          <div>
+            <%= f.label "Name*", class: "title" %>
+            <br />
+            <%= f.text_field :name, placeholder: "Petter Pipper", class: "input" %>
+          </div>
+          <div>
+            <%= f.label "Job Position*", class: "title" %>
+            <br />
+            <%= f.text_field :position, placeholder: "Job Position", class: "input" %>
+          </div>
+          <div>
+            <%= f.label "Private number*", class: "title" %>
+            <br />
+            <%= f.text_field :private_number, placeholder: "#12", class: "input" %>
+          </div>
+          <div>
+            <br />
+            <%= f.hidden_field :store_id, placeholder: "Store #1", class: "input" %>
+          </div>
+          <div>
+            <%= f.label "Profile photo", class: "title" %>
+            <br />
+            <%= f.file_field :photo, class: "photo-loader" %>
+          </div>
+          <div class="button-group">
+            <div>
+              <%= f.submit "Create", class:"button" %>
+              <%= link_to "<- Return", dashboard_index_path, class:"link" %>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div>
-    <%= f.label :email %>
-    <%= f.email_field :email, placeholder: "petter@email.com" %>
+  <div class="right">
   </div>
-
-  <div>
-    <%= f.label :position %>
-    <%= f.text_field :position, placeholder: "Job Position" %>
-  </div>
-
-  <div>
-    <%= f.label :private_number %>
-    <%= f.text_field :private_number, placeholder: "#12" %>
-  </div>
-
-  <div>
-    <%= f.label :store_id %>
-    <%= f.text_field :store_id, placeholder: "Store #1" %>
-  </div>
-
-  <div>
-    <%= f.submit "Create" %>
-  </div>
-
-
-<% end %>
+</div>
