--- a/app/assets/stylesheets/layouts/_employeeform.scss
+++ b/app/assets/stylesheets/layouts/_employeeform.scss
@@ -11,11 +11,13 @@
       width: 100vw;
       height: 100%;
       background-color: #f9f9f9;
+      padding: 7rem;
     }
     
     @media (min-width: 640px) {
       flex: 2;
       height: 100%;
+      padding: 10rem;
     }
     
     .link {
@@ -23,7 +25,8 @@
     }
 
     .header {
-
+      margin-bottom: 2rem;
+      
       h1 {
         padding-top: 1rem;
         font-family: var(--font-family-sans);
@@ -39,19 +42,16 @@
         color: #000;
         text-align: center;
       }
+
     }
     
     .content-main {
-      width: 90%;
       height: 100%;
-      margin: 0 auto;
-      padding: 1rem 1rem 0 1rem;
+      // margin: 0 auto;
+      // padding: 1rem 1rem 0 1rem;
 
       .content-form {
-        width: 100%;
         height: auto;
-        padding: 1rem 1rem 0 1rem;
-        margin: 0 auto;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -67,7 +67,7 @@
 
       .input {
         width: 100%;
-        margin: 0.5rem 0;
+        min-width: 320px;
         padding: 0.5rem;
         border-radius: 0.2rem;
         border: none;
@@ -111,7 +111,6 @@
       }
 
       .link {
-        width: 100%;
         padding: 0.5rem;
         font-size: 0.7rem;
         font-weight: 400;
@@ -124,11 +123,6 @@
         }
       }
     }
-    
-    @media (min-width: 320px) {
-      width: 100vw;
-      height: 7rem;
-    }
   }
 
   .right {
@@ -139,11 +133,8 @@
     @media (min-width: 640px) {
       display: block;
       height: 100vh;
-      // background-import: url('https://images.pexels.com/photos/6953568/pexels-photo-6953568.jpeg');
-      background-image: url('https://images.pexels.com/photos/6953568/pexels-photo-6953568.jpeg'), linear-gradient(180deg, rgba(255, 255, 255, 0) 20.8%, rgba(0, 0, 0, 0.76) 100%);
+      background: linear-gradient(to bottom, transparent, rgb(0, 0, 0)), url('https://images.pexels.com/photos/6953568/pexels-photo-6953568.jpeg');
       background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
       flex: 1;
     }
   }
