Create form for private number employee

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,12 +18,12 @@
    </div>
   </div>
 
-  <%= form_with model: @employee do |f| %>
-      <div class="d-flex fd-column form_private_number mx-auto px-1 mt-5">
-      <i class="fa fa-key icon"></i>
-        <%= f.text_field :private_number, class: "around mb-1 input-form-home", placeholder: "Private Number" %>
-        <%= f.submit "check", class: "around submit-form-home" %>
-      </div>
+
+  <%= form_with url: "/parse_input", method: :post do |form| %>
+  <div class="d-flex fd-column form_private_number mx-auto px-1 mt-5">
+    <%= form.text_field(:private_number, class: "around mb-1 input-form-home", placeholder: "Private Number") %>
+    <%= form.submit("check", class: "around submit-form-home") %>
+  </div>
   <% end %>
 
 </div>
