Fix employee form

--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -28,8 +28,9 @@
             <%= f.text_field :private_number, placeholder: "#12", class: "input" %>
           </div>
           <div>
+            <%= f.label "Store", class: "title" %>
             <br />
-            <%= f.hidden_field :store_id, placeholder: "Store #1", class: "input" %>
+            <%= f.text_field :store_id, placeholder: "Store #1", class: "input" %>
           </div>
           <div>
             <%= f.label "Profile photo", class: "title" %>
