--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,18 +15,21 @@
 @import "components/quote";
 @import "components/flash";
 
-// Layouts
-@import "layouts/container";
-@import "layouts/header";
-@import "layouts/navbar";
-@import "layouts/employeeform";
-
 // Utilites
 @import "utilities/align_and_justify";
 @import "utilities/display";
 @import "utilities/spacing";
 @import "utilities/flex_direction";
 @import "utilities/text_align";
+@import "utilities/utils";
+
+// Layouts
+@import "layouts/container";
+@import "layouts/header";
+@import "layouts/navbar";
+@import "layouts/employeeform";
+@import "layouts/flash_cards";
+
 
 // Pages
 @import "pages/home_index";
