Refactoring navbar, links  and flash cards

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Vista Dashboard para el administrador</h1>
 <p>Find me in app/views/dashboard/index.html.erb</p>
   <div>
+    <%= link_to "Timer", root_path,class: "mr-2" %>
     <%= link_to 'Create Employee', employee_create_path %>
   </div>
   <table>
