--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,12 @@
     <%# <p class="notice"><%= notice %></p>
     <%# <p class="alert"><%= alert %></p>
     <% flash.each do |type, msg| %>
-    <div class="alert">
-      <%= msg %>
-    </div>
+      <% if type == "notice" || type == "alert" %>
+        <div class="alert">
+          <% p type %>
+          <%= msg %>
+        </div>
+      <% end %>
     <% end %>
     <%= yield %>
   </body>
