--- a/app/assets/stylesheets/pages/_home_index.scss
+++ b/app/assets/stylesheets/pages/_home_index.scss
@@ -1,18 +1,17 @@
 .container-home {
   height: 100vh;
   width: 100%;
-  background: #fc466b; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #2606a6,
-    #fc466b
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    90deg,
-    rgba(38, 6, 166, 1) 0%,
-    rgba(154, 10, 177, 1) 35%,
-    rgba(255, 0, 61, 1) 100%
-  );
+  background: #fc466b;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right,
+      #2606a6,
+      #fc466b);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(90deg,
+      rgba(38, 6, 166, 1) 0%,
+      rgba(154, 10, 177, 1) 35%,
+      rgba(255, 0, 61, 1) 100%);
+
   .container {
     display: flex;
     justify-content: center;
@@ -21,9 +20,11 @@
     &__number {
       margin-right: 15px;
       font-family: var(--font-family-share-tech);
+
       .number-clock {
         font-size: var(--font-size-xxxxxl);
       }
+
       p {
         text-transform: uppercase;
         font-size: var(--font-size-xl);
@@ -41,9 +42,10 @@
       top: 32px;
     }
   }
+
   .form_private_number {
     max-width: 886px;
-    
+
     ::-webkit-input-placeholder {
       color: white;
       font-family: "Inter";
@@ -52,6 +54,7 @@
       font-size: 24px;
       line-height: 29px;
     }
+
     .input-form-home {
       padding: 11px 34px 11px 34px;
       color: var(--color-white);
@@ -65,6 +68,7 @@
       outline: none;
       font-size: 24px;
     }
+
     .submit-form-home {
       padding: 11px 34px 11px 34px;
       font-size: 24px;
@@ -75,6 +79,7 @@
       color: var(--color-white);
       background: var(--color-pink);
       transition: 0.3s;
+
       &:hover {
         background-color: #fbab7e;
         background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
