--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Jaldi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@500&display=swap');
 :root {
   // Simple fonts
   --font-family-sans: "Poppins", sans-serif;
   --font-family-share-tech: 'Share Tech', sans-serif;
   --font-family-jaldi: 'Jaldi', sans-serif;
+  --font-family-manrope: 'Manrope';
+
   // Classical line heights
   --line-height-headers: 1.1;
   --line-height-body: 1.5;
