--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,41 +1,80 @@
 <header class="header">
-        <div class="navbar">
-            <div class="box1">
-                <div class="imagebox">
-                    <%= image_tag image_url('hamburguer.svg')%>
-                </div>
-            </div>
-            <div class="profilebox">
-                <%= image_tag 'admin_profile.png', class:"profile"%>
-                <%= image_tag 'vector 1.svg',class:"vec" %>
-            </div>
-        </div>
-    </header>
-  <div>
-    <%= link_to "Timer", root_path,class: "mr-2" %>
-    <%= link_to 'Create Employee', employee_create_path %>
+  <div class="navbar">
+    <div class="box1">
+      <div class="imagebox">
+        <%= image_tag image_url('hamburguer.svg')%>
+      </div>
+    </div>
+    <div class="profilebox">
+      <%= image_tag 'admin_profile.png', class:"profile"%>
+      <%= image_tag 'vector 1.svg',class:"vec" %>
+    </div>
   </div>
-  <table>
-    <thead>
+</header>
+<div>
+  <%= link_to "Timer", root_path,class: "mr-2" %>
+  <%= link_to 'Create Employee', employee_create_path %>
+</div>
+<div class="px-1">
+  <div class="all-employee">
+    <h2 class="all-employee__title">All employees</h2>
+    <div class="constrain mb-1">
+      <input class="input-simple" type="text" placeholder="Search employee">
+    </div>
+    <table class="all-employee__table">
+      <thead>
+        <th>Id</th>
         <th>Name</th>
         <th>Email</th>
         <th>Position</th>
         <th>P. Number</th>
         <th>Store</th>
         <th>Edit</th>
-    </thead>
-    <tbody>
-      <% @employees.each do |e| %>
-        <tr>
-          <td><%=link_to e.name, dashboard_path(e) %></td>
-          <td> <%= e.email %></td>
-          <td><%= e.position %></td>
-          <td>  <%= e.private_number %></td>
-          <td> <%= e.store_id %></td>
-          <td> <%= link_to 'Edit', edit_dashboard_path(e) %></td>
-          <td> <%= e.id %></td>
-        <tr>
-      <% end %>
-    </tbody>
-  </th>
-</table>
+      </thead>
+      <tbody>
+        <% @employees.each do |e| %>
+          <tr class="mt-1">
+            <td><%= e.id %></td>
+            <td><%=link_to e.name, dashboard_path(e) %></td>
+            <td><%= e.email %></td>
+            <td><%= e.position %></td>
+            <td><%= e.private_number %></td>
+            <td><%= e.store_id %></td>
+            <td><%= link_to 'Edit', edit_dashboard_path(e) %></td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div class="pagination d-flex fd-row justify-space-between mx-auto mt-2">
+        <div class="pagination__previus-page">
+          <p>previus page</p>
+        </div>
+        <div class="pagination__nums d-flex justify-center">
+          <div>
+            <p>1</p>
+          </div>
+          <div>
+            <p>2</p>
+          </div>
+          <div>
+            <p>3</p>
+          </div>
+          <div>
+            <p>4</p>
+          </div>
+          <div>
+            <p>5</p>
+          </div>
+          <div>
+            <p>6</p>
+          </div>
+          <div>
+            <p>7</p>
+          </div>
+        </div>
+        <div class="pagination__next-page">
+          <p>next page</p>
+        </div>
+      </div>
+    </div>
