--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,7 +21,7 @@
 // Layouts
 @import "layouts/container";
 @import "layouts/header";
-@import "layouts/navbar";
+@import "layouts/navbar_home";
 @import "layouts/employeeform";
 @import "layouts/flash_cards";
 @import "layouts/navbar_dashboard";
