--- a/app/assets/stylesheets/layouts/_navbar_home.scss
+++ b/app/assets/stylesheets/layouts/_navbar_home.scss
@@ -13,7 +13,7 @@
       color: rgb(77, 77, 219);
     }
   }
-  &__button {
+  &__link {
     background: rgba(255, 255, 255, 0.264);
     border-radius: 5px;
     border-style: none;
@@ -30,5 +30,8 @@
       background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
       color: white;
     }
+  &__button{
+    padding: 0 10px;
+  }
   }
 }
