Setup cloudinary gem and add its styles

--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -35,7 +35,7 @@
           <div>
             <%= f.label "Profile photo", class: "title" %>
             <br />
-            <%= f.file_field :photo, class: "photo-loader" %>
+            <%= f.file_field :avatar, class: "photo-loader" %>
           </div>
           <div class="button-group">
             <div>
