--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -8,8 +8,7 @@
     line-height: 32px;
     margin: 2rem 0;
   }
-  
-  
+
   &__table {
     border-collapse: collapse;
     table-layout: fixed;
@@ -32,10 +31,10 @@
         color: hsla(0, 0%, 50%, 1);
         font-size: 12px;
         font-style: normal;
-        padding: 1rem 1rem;
+        padding: 14px 1rem;
         text-align: center;
         vertical-align: middle;
-
+        align-items: center;
         a {
           color: hsla(0, 0%, 50%, 1);
           font-size: 12px;
@@ -86,7 +85,7 @@
   background-repeat: no-repeat;
   background-position: 15px 7px;
   border-radius: 4px;
-  border: 1px solid #E6E6E6;
+  border: 1px solid #e6e6e6;
   font-size: 12px;
   line-height: 1.5;
   padding: 0.5em 2em 0.5em 4em;
@@ -100,4 +99,13 @@
 .input-simple:focus {
   border: 1px solid #84a2fa;
   outline: none;
+}
+
+.image-profile {
+  width: 35px;
+  height: 35px;
+  background: #ffffff;
+  border: 3px solid #ececec;
+  border-radius: 50px;
+  object-fit: cover;
 }
