--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -4,12 +4,12 @@
     <div>
       <%= link_to "Timer", root_path,class: "nav-home__logo mr-2" %>
       <% if admin_signed_in? %>
-        <%= link_to "Dashboard", dashboard_index_path, method: :get, class:"nav-home__button" %>
+        <%= link_to "Dashboard", dashboard_index_path, method: :get, class:"nav-home__link" %>
       <% end %>
     </div>
     <div>
       <% if admin_signed_in? %>
-        <%= button_to "Sign_Out", destroy_admin_session_path, method: :delete, class:"nav-home__button cursor-pointer" %>
+        <%= button_to "Sign_Out", destroy_admin_session_path, method: :delete, class:" py-0 nav-home__link cursor-pointer" %>
       <% else %>
         <%= link_to "Admin Login", new_admin_session_path, method: :get, class:"nav-home__button" %>
       <% end %>
