--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -51,6 +51,9 @@
           </tbody>
         </table>
       </div>
+      <div class="d-flex fd-row justify-space-between mx-auto mt-2">
+        <%= paginate @employees %>
+      </div>
       <div class="pagination d-flex fd-row justify-space-between mx-auto mt-2">
         <div class="pagination__previus-page">
           <p>previus page</p>
