--- a/app/assets/stylesheets/layouts/_navbar_home.scss
+++ b/app/assets/stylesheets/layouts/_navbar_home.scss
@@ -30,8 +30,24 @@
       background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
       color: white;
     }
-  &__button{
-    padding: 0 10px;
   }
+
+    &__button {
+      background: rgba(255, 255, 255, 0.264);
+      border-radius: 5px;
+      border-style: none;
+      color: white;
+      font-family: "Inter";
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 54px;
+      padding: 0 10px;
+      transition: 0.3s;
+      &:hover {
+        background-color: #fbab7e;
+        background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+        color: white;
+      }
   }
 }
