--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,49 +1,47 @@
-<header class="header">
-  <nav class="nav-main">
-            <!--boton-->
-            <input type="checkbox" class="nav-main__btn-collapse" id="nav-main__checkbox" />
-            <label for="nav-main__checkbox" class="nav-main__btn-collapse-icon">
-                <span class="icon-nav"></span>
-                <span class="icon-nav"></span>
-                <span class="icon-nav"></span>
-            </label>
-            
-            <!--menu-->
-            <div class="nav-main__btn-collapse-bg"></div>
-            <div class="nav-main__menu">
-              <a href="" class="link-item">
-                <%= button_to image_tag('TIMER.svg'), root_path, method: :get,class:"button-styles"%>
-              </a>
-              <a href="" class="link-item">
-                <p class="main_menu">Main Menu</p>
-              </a>
-              <a href="" class="link-item">
-                <%= image_tag 'dashboard.svg' %> Dashboard
-              </a>
-              <a href="" class="link-item">
-                <%= button_to image_tag('employee.svg')+ "New_Employee", employee_create_path, method: :get,class:"button-styles"%>
-              </a>
-              <a href="" class="link-item">
-                <%= button_to image_tag('department.svg')+ "Stores", stores_path, method: :get,class:"button-styles"%>
-              </a>
-              <a href="" class="link-item">
-                <%= button_to image_tag('log_out.svg')+ "Log out", destroy_admin_session_path, method: :delete,class:"button-styles"%>
-              </a>
-            </div>
-            <!--foto de perfil-->
-            <div class="profilebox">
-              <a href="" class="profilebox__link-item">
-                <%= image_tag 'admin_profile.png', class:"profile"%>
-              </a>
-            </div>
-  </nav>
-</header>
-<div class="px-1">
+<%= render 'navbar' %>
+
+<div class="content-dashboard">
+  <h2 class="pt-2 pb-1">Dashboard</h2>
+
+  <div class="cards-report">
+    <div class="cards-report__attended-by-day card-report-style d-flex fd-column justify-space-between ">
+      <div class="cards-report__attended-by-day--title ">Attended by day</div>
+      <%= form_with(url: dashboard_index_path, method: :get) do |form|  %>
+        <%= form.date_field :date_day, class:"input-simple", data: {action: "input=>search-form#search"}  %>
+        <%= form.submit %> 
+      <% end  %>
+      <div class="cards-report__attended-by-day--num-day">
+       <% if @attendances_day %>   
+         <%= @attendances_day.count %>
+       <% else %>
+         0
+       <% end %>
+        
+      </div>
+      <div class="cards-report__attended-by-day--style active ">4 Active employees</div>
+    </div>
+    <div class="cards-report__average-by-month card-report-style d-flex fd-column justify-space-between">
+     <div class="cards-report__attended-by-day--title ">Absence by day</div>
+      <div class="cards-report__attended-by-day--num-day ">24</div>
+      <div class="cards-report__attended-by-day--style absent">4 Absent employees</div>
+    </div>
+    <div class="cards-report__absence-by-month card-report-style d-flex fd-column justify-space-between">
+     <div class="cards-report__attended-by-day--title ">Attended by day</div>
+      <div class="cards-report__attended-by-day--num-day ">24</div>
+      <div class="cards-report__attended-by-day--style darys">Darys worked / Month days</div>
+    </div>
+  </div>
+
   <div class="all-employee">
     <h2 class="all-employee__title">All employees</h2>
+
     <div class="constrain mb-1">
-      <input class="input-simple" type="text" placeholder="Search employee">
+     <%= render "dashboard/search_form" %>
     </div>
+    <div id="search_results"></div>
+ 
+    </div>
+
     <table class="all-employee__table">
       <thead>
         <th>Id</th>
@@ -52,7 +50,7 @@
         <th>Position</th>
         <th>P. Number</th>
         <th>Store</th>
-        <th>Edit</th>
+        <th colspan="2">Options</th>
       </thead>
       <tbody>
         <% @employees.each do |e| %>
@@ -67,8 +65,15 @@
             <td><%= e.email %></td>
             <td><%= e.position %></td>
             <td><%= e.private_number %></td>
-            <td><%= e.store_id %></td>
-            <td><%= link_to 'Edit', edit_dashboard_path(e) %></td>
+            <td><%= e.store.name %></td>
+            <td><%= link_to 'Edit', edit_dashboard_path(e), class:"link-edit" %></td>
+            <td>
+              <% if e.operative %>
+                <%= button_to 'Deactive', dashboard_delete_path(e), method: :delete,  class: "btn-danger cursor-pointer" %>
+              <% else %>
+                <%= button_to 'Active', dashboard_delete_path(e), method: :delete, class: "btn-success cursor-pointer" %>
+              <% end %>
+           </td>
             </tr>
             <% end %>
           </tbody>
@@ -77,4 +82,5 @@
       <div class="d-flex fd-row justify-space-between mx-auto mt-2">
         <%= paginate @employees %>
       </div>
-  
+      
+      <%= Time.zone.now %>
