--- a/app/views/dashboard/_search_form.html.erb
+++ b/app/views/dashboard/_search_form.html.erb
@@ -1,5 +1,4 @@
-    <%= form_with url: search_dashboard_index_path, method: :post, data: {controller: "debounce", debounce_target: "form" } do |form|  %>
-      <%= form.search_field :name_search, data: { action: "input->debounce#search" } %>
+    <%= form_with url: dashboard_root_path, method: :get, data: {controller: "debounce", debounce_target: "form" } do |form|  %>
+      <%= form.search_field :query,class:"input-simple", data: { action: "input->debounce#search" } %>
     <% end %>
-    <div id="search_results"></div>
     
