--- a/app/assets/stylesheets/layouts/_navbar_dashboard.scss
+++ b/app/assets/stylesheets/layouts/_navbar_dashboard.scss
@@ -28,7 +28,7 @@ html,
 }
 
 .profilebox__link-item {
-    margin: 0 1rem;
+    // margin: 0 1rem;
 }
 
 .nav-main__btn-collapse:checked~.profilebox {
