--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -4,7 +4,7 @@
     <div>
       <%= link_to "Timer", root_path,class: "nav-home__logo mr-2" %>
       <% if admin_signed_in? %>
-        <%= link_to "Dashboard", dashboard_index_path, method: :get, class:"nav-home__link" %>
+        <%= link_to "Dashboard", dashboard_root_path, method: :get, class:"nav-home__link" %>
       <% end %>
     </div>
     <div>
