--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,8 +1,8 @@
 <%= render 'navbar' %>
 
 <div class="content-dashboard">
-  <h2 class="pt-2 pb-1">Dashboard</h2>
-
+  <h2 class="pt-2 mb-2">Dashboard</h2>
+  <h3 class="mb-2"> Reports general </h3>
   <div class="cards-report">
     <div class="cards-report__attended-by-day card-report-style d-flex fd-column justify-space-between ">
       <div class="d-flex">
